--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 	</div><div style="clear: both;"></div>
 
 <div class="container bg-3">
-	<div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	<img src="pictures/pexels-photo-533930.jpeg" width="400px" height="200px" class="img-circle" style="float: left; clear: left;">tempor <a href="">Duis aute irure dolor in reprehenderit in voluptate velit esse	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident, sunt in culpa qui</a> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat.  officia deserunt mollit anim id est laborum.</p></div>
+	<div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	<img src="Pictures/pexels-photo-533930.jpeg" width="400px" height="200px" class="img-circle" style="float: left; clear: left;">tempor <a href="">Duis aute irure dolor in reprehenderit in voluptate velit esse	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat nonproident, sunt in culpa qui</a> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat.  officia deserunt mollit anim id est laborum.</p></div>
 		
 	</div>
 
 <div class="container bg-4 left">
 	<div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et <img src="pictures/pexels-photo-356830.jpeg" width="400px" height="300px" class="img-thumbnail" style="float: right; clear: right;"> dolore magna aliqua. Ut enim ad minim veniam,
+	tempor incididunt ut labore et <img src="Pictures/pexels-photo-356830.jpeg" width="400px" height="300px" class="img-thumbnail" style="float: right; clear: right;"> dolore magna aliqua. Ut enim ad minim veniam,
 	quis <a href="">nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur.</a> Excepteur sint occaecat cupidatat non
@@ -58,7 +58,7 @@
 
 <div class="container bg-5">
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et <img src="pictures/th.jpg" width="400px" height="200px" style="float: left; clear: left;">dolore magna aliqua. Ut enim ad minim veniam,
+	tempor incididunt ut labore et <img src="Pictures/th.jpg" width="400px" height="200px" style="float: left; clear: left;">dolore magna aliqua. Ut enim ad minim veniam,
 	<a href="">quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur.</a>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -82,7 +82,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="pictures/cairo_house_real_estate_egypt_50_01.jpg" alt="Cairo House">
+      <img src="Pictures/cairo_house_real_estate_egypt_50_01.jpg" alt="Cairo House">
       <div class="carousel-caption">
         <h3>Cairo House</h3>
         <p>Cairo_house_real estate</p>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="item">
-      <img src="pictures/pexels-photo-276724.jpeg" alt="House">
+      <img src="Pictures/pexels-photo-276724.jpeg" alt="House">
       <div class="carousel-caption">
         <h3>Chania House</h3>
         <p>Real estate</p>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="item">
-      <img src="pictures/pexels-photo-533930.jpeg" alt="House">
+      <img src="Pictures/pexels-photo-533930.jpeg" alt="House">
       <div class="carousel-caption">
         <h3>House</h3>
         <p>Real estate</p>
@@ -106,7 +106,7 @@
     </div>
 
     <div class="item">
-      <img src="pictures/pexels-photo-356830.jpeg" alt="City">
+      <img src="Pictures/pexels-photo-356830.jpeg" alt="City">
       <div class="carousel-caption">
         <h3>City</h3>
         <p>Beautiful city</p>
@@ -186,7 +186,7 @@
       <p>We will help you get to your destination easily and safe by providing you a variety of options to choose from according to your taste and desires.</p>
     </div>
     <div class="col-sm-4">
-      <span><img src="pictures/money.jpg"></span>
+      <span><img src="Pictures/money.jpg"></span>
       <h4>SAVE MONEY</h4>
       <p>We assist to find an hotel and apartment easier for free</p>
     </div>
@@ -204,7 +204,7 @@
       <p>You can travel anywhere you want and explore new places without worries of where to rest.</p>
     </div>
     <div class="col-sm-4">
-      <span><img src="pictures/h6.jpg"></span>
+      <span><img src="Pictures/h6.jpg"></span>
       <h4>HOME</h4>
       <p>Quickly find a home to thrive in or an apartment for rent</p>
     </div>
@@ -233,26 +233,26 @@
 
             <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo">5 <span class="glyphicon glyphicon-star g2"></span><span class="g2 glyphicon glyphicon-star"></span><span class="g2 glyphicon glyphicon-star"></span><span class="g2 glyphicon glyphicon-star"></span><span class="g2 glyphicon glyphicon-star"></span></button>
                 <div id="demo" class="collapse">
-                <a href="#"><img src="pictures/h3.jpg"><strong>Bime Spa</strong></a>
-                <a href="#"><img src="pictures/h1.jpg"><strong>Realtime Inn</strong></a>
+                <a href="#"><img src="Pictures/h3.jpg"><strong>Bime Spa</strong></a>
+                <a href="#"><img src="Pictures/h1.jpg"><strong>Realtime Inn</strong></a>
                 </div>
 
             <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo1">4 <span class="g2 glyphicon glyphicon-star"></span><span class="g2 glyphicon glyphicon-star"></span><span class="g2 glyphicon glyphicon-star"></span><span class="g2 glyphicon glyphicon-star"></span></button>
                 <div id="demo1" class="collapse">
-                <a href="#"><img src="pictures/h2.jpg"><strong>Aya Inn</strong></a>
-         <a href="#"><img src="pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
+                <a href="#"><img src="Pictures/h2.jpg"><strong>Aya Inn</strong></a>
+         <a href="#"><img src="Pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
                 </div>
 
             <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo2">3 <span class="g2 glyphicon glyphicon-star"><span class="g2 glyphicon glyphicon-star"></span><span class="g2 glyphicon glyphicon-star"></span></span></button>
                 <div id="demo2" class="collapse">
-                  <a href="#"><img src="pictures/pexels-photo-271634.jpeg" width="400px" height="250px"><strong>Ndupawa Hotel</strong></a>
-         <a href="#"><img src="pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
+                  <a href="#"><img src="Pictures/pexels-photo-271634.jpeg" width="400px" height="250px"><strong>Ndupawa Hotel</strong></a>
+         <a href="#"><img src="Pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
                 </div>
 
             <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo3">Normal</button>
                 <div id="demo3" class="collapse">
-                  <a href="#"><img src="pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
-         <a href="#"><img src="pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
+                  <a href="#"><img src="Pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
+         <a href="#"><img src="Pictures/h5.jpg"><strong>Ndupawa Hotel</strong></a>
                 </div>
 
            
@@ -269,26 +269,26 @@
 
            <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo5">4 Bedrooms</button>
                 <div id="demo5" class="collapse">
-        <a href="#"><img src="pictures/h3.jpg"><strong>Downtown Apartments</strong></a>
-         <a href="#"><img src="pictures/th.jpg"><strong>Midway Apartments</strong></a>
+        <a href="#"><img src="Pictures/h3.jpg"><strong>Downtown Apartments</strong></a>
+         <a href="#"><img src="Pictures/th.jpg"><strong>Midway Apartments</strong></a>
                 </div>
 
            <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo6">3 Bedrooms</button>
                 <div id="demo6" class="collapse">
-               <a href="#"><img src="pictures/h6.jpg"><strong>Savannah Apartments</strong></a>
-         <a href="#"><img src="pictures/h3.jpg"><strong>Woodlands Apartments</strong></a>
+               <a href="#"><img src="Pictures/h6.jpg"><strong>Savannah Apartments</strong></a>
+         <a href="#"><img src="Pictures/h3.jpg"><strong>Woodlands Apartments</strong></a>
                 </div>
 
            <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo7">2 Bedrooms</button>
                 <div id="demo7" class="collapse">
-         <a href="#"><img src="pictures/h6.jpg"><strong>Bime Apartments</strong></a>
-         <a href="#"><img src="pictures/th.jpg"><strong>Nairobi Apartments</strong></a>
+         <a href="#"><img src="Pictures/h6.jpg"><strong>Bime Apartments</strong></a>
+         <a href="#"><img src="Pictures/th.jpg"><strong>Nairobi Apartments</strong></a>
                 </div>
 
            <button class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#demo8">1 Bedroom</button>
                 <div id="demo8" class="collapse">
-         <a href="#"><img src="pictures/th.jpg"><strong>Nairobi Apartments</strong></a>
-         <a href="#"><img src="pictures/th.jpg"><strong>Nairobi Apartments</strong></a>
+         <a href="#"><img src="Pictures/th.jpg"><strong>Nairobi Apartments</strong></a>
+         <a href="#"><img src="Pictures/th.jpg"><strong>Nairobi Apartments</strong></a>
                 </div>
 
       
