--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>BEKA CONSULTANCY</title>
 	<meta charset="utf-8">
-  	<meta name="viewport" content="width=device-width" initial-scale="1.0">
+  	<meta name="viewport" content="width=device-width" initial-scale="1.0" >
   	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="Estate.css">
     <link rel="stylesheet" type="text/css" href="SignUp.css">
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<div class="pageheader class-container text-center">
-		<h1><img src="pictures/th.jpg" width="150px" height="100px">BEKA CONSULTANCY</h1>
+		<h1><img src="Pictures/th.jpg" width="150px" height="100px">BEKA CONSULTANCY</h1>
 	</div> <!--end of pageheader-->
 	
 	<div class="container-fluid">
@@ -37,7 +37,7 @@
   </form>
 
 <div class="container bg-2">
-	<p style="float: left;"><a href="#">Are you looking for an hotel to spend your night?</a><img src="pictures/pexels-photo-276724.jpeg" width="400px" height="200px" class="img-rounded" style="float: right; clear: right;"><br>Are you out for a vacation with your Family?<br>visit us to help you get better accomodation...</p>
+	<p style="float: left;"><a href="#">Are you looking for an hotel to spend your night?</a><img src="Pictures/pexels-photo-276724.jpeg" width="400px" height="200px" class="img-rounded" style="float: right; clear: right;"><br>Are you out for a vacation with your Family?<br>visit us to help you get better accomodation...</p>
 	
 	</div><div style="clear: both;"></div>
 
